cmake_minimum_required(VERSION 3.17)
project(module_1)

set(CMAKE_CXX_STANDARD 14)


add_executable(module_1_task5 5.cpp)
add_executable(module_1_task1 1.cpp)
add_executable(module_1_task2 2.cpp)
add_executable(module_1_task3 3.cpp)
add_executable(module_1_task4 4.cpp)
add_executable(module_1_task6 6.cpp)

