cmake_minimum_required(VERSION 3.15)
project(module_1)

set(CMAKE_CXX_STANDARD 14)


add_executable(module_1_task5 merge_sort_painted_line.cpp)
add_executable(module_1_task1 brute_force_on_linked_list.cpp)
add_executable(module_1_task2 binary_search.cpp)
add_executable(module_1_task3 deque_with_dynamic_buffer.cpp)
add_executable(module_1_task4 heap_with_dynamic_buffer.cpp)
add_executable(module_1_task6 k_stat_with_q_sort.cpp)

